@@ -2,7 +2,7 @@ Package: msgl
 Type: Package
 Title: High Dimensional Multiclass Classification Using Sparse Group Lasso
 Version: 2.3.5
-Date: 2016-10-13
+Date: 2016-12-28
 Author: Martin Vincent
 Maintainer: Martin Vincent <martin.vincent.dk@gmail.com>
 Description: Multinomial logistic regression with sparse group lasso penalty.
