@@ -15,7 +15,7 @@ set.seed(100L)
 
 lambda <- msgl::lambda(x, classes, alpha = .5, d = 25, lambda.min = 0.02, standardize = TRUE)
 
-#TODO test lambda
+#NOTE test lambda
 
 fit.cv <- msgl::cv(x, classes, alpha = .5, lambda = lambda, standardize = TRUE)
 
@@ -23,7 +23,7 @@ err <- Err(fit.cv, type ="count")
 
 if(err[1] < 80 | err[25] > 30) stop()
 
-#TODO test features and parameters
+#NOTE test features and parameters
 
 # Test response format
 if( ! all(dim(fit.cv$link[[1]]) == c(10, 100))) stop()
